Updated Travis yml for CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,11 @@ env:
 addons:
     code_climate:
         repo_token: 761b615b0339c52cf9d7ceb0eba5819f278c0e74eeebc3f70040f12b89514cd4
-script: istanbul cover node_modules/karma/bin/karma start --single-run --browsers PhantomJS
+script:
+  - ng lint
+  - ng build --prod --base-href https://github.com/AmitKRSaha/NgPatient
 before_script:
   - npm install codeclimate-test-reporter istanbul -g
+  - npm install -g @angular/cli
 after_script:
   - codeclimate-test-reporter < ./coverage/lcov.info
