--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ addons:
         repo_token: 761b615b0339c52cf9d7ceb0eba5819f278c0e74eeebc3f70040f12b89514cd4
 script:
   - ng lint
+  - npm run test-headless
   - ng build --prod --base-href https://github.com/AmitKRSaha/NgPatient
 before_script:
   - npm install codeclimate-test-reporter istanbul -g
